# Projet-session-4

./: .gitignore
Documentation/Rapport/: Rapport .docx  Rapport TEMPLATE.docx  Rapport Technique .docx  Rapport synthèse.docx
Documentation/Rapport/programmation/: 243-456_Projet_H2026.docx
Logiciel/Altium/projet_session_4/: Constraints.xml  Sheet1.SchDoc  Shematics.SchDoc  projet_session_4.PrjPcb  projet_session_4.PrjPcbStructure
Logiciel/Altium/projet_session_4/Librairies/: 243-436-MikoBus-DrvMot.PcbLib  243-436-MikoBus-DrvMot.SCHLIB  TEP_243-AltiumLIB-Conn-TP-MH.SCHLIB  TEP_243-Altium_Library.SCHLIB  mikroBUS_Add-on_standard.PcbLib  mikroBUS_socket_standard.PcbLib  mikroBUS_socket_standard.SchLib
Logiciel/Altium/projet_session_4/__Previews/: Sheet1.SchDocPreview  Shematics.SchDocPreview
Logiciel/ESP/: CMakeLists.txt
Logiciel/ESP/main/: CMakeLists.txt  app_main.c
Logiciel/ESP/main/app/: app_tasks.c  app_tasks.h
Logiciel/ESP/main/drivers/: bt_spp_client.c  bt_spp_client.h  button.c  button.h  joystick.c  joystick.h
Logiciel/ESP/main/modules/: control.c  control.h  protocol.c  protocol.h
Logiciel/STM/: .cproject  .mxproject  .project  Projet_final_v1.ioc  projet session 4.ioc
Logiciel/STM/App/Inc/: app_types.h  vehicle_control.h  vehicle_diagnostic.h  vehicle_display.h  vehicle_display_data.h  vehicle_display_diag.h  vehicle_status_led.h  vehicle_tasks.h
Logiciel/STM/App/Src/: vehicle_control.c  vehicle_diagnostic.c  vehicle_display.c  vehicle_display_data.c  vehicle_display_diag.c  vehicle_status_led.c  vehicle_tasks.c
(+33 files in other folders)
